LAU-873 normalise search and insertion to trim and make lowercase